--- a/styles.css
+++ b/styles.css
@@ -56,14 +56,23 @@
     color: #fff;
     position: absolute;
     display: inline-block;
-    align-items: center;
     border: solid #fff 2px;
     border-radius: 10px;
     padding: 10px;
 }
 .result-container2 {
+    margin-top: 10px;
     position: absolute;
-    display: flex;
+    display: block;
+    border: solid #fff 2px;
+    border-radius: 10px;
+    color: #fff;
+    padding: 10px;
+    align-items: center;
+    align-self: center;
+}
+.result-container2 p {
+    text-align: center;
 }
 
 body {
