--- a/styles.css
+++ b/styles.css
@@ -50,19 +50,25 @@
     z-index: 50;
 
 }
-
-.result-container {
-    margin-left: 30px;
-    color: #fff;
+.results {
     position: absolute;
     display: inline-block;
+}
+.result-container {
+    margin-top: 20px;
+
+    margin-left: 30px;
+    color: #fff;
+    position: relative;
+    display: block;
     border: solid #fff 2px;
     border-radius: 10px;
     padding: 10px;
 }
 .result-container2 {
-    margin-top: 10px;
-    position: absolute;
+    margin-top: 30px;
+    margin-left: 30px;
+    position:relative;
     display: block;
     border: solid #fff 2px;
     border-radius: 10px;
